packages/llm_llamacpp/src/llama.h

//
// C interface
//
// TODO: show sample usage
//

// Forward declarations
struct llama_model;
struct llama_context;
typedef struct llama_model llama_model;
typedef struct llama_context llama_context;
typedef int32_t llama_token;
// Model vocabulary type
enum llama_vocab_type {
    LLAMA_VOCAB_TYPE_NONE = 0, // For models without a vocabulary
    LLAMA_VOCAB_TYPE_SPM  = 1, // SentencePiece
    LLAMA_VOCAB_TYPE_BPE  = 2, // Byte Pair Encoding
    LLAMA_VOCAB_TYPE_WPM  = 3, // WordPiece
    LLAMA_VOCAB_TYPE_UGM  = 4, // Unigram
    LLAMA_VOCAB_TYPE_RWKV = 5, // RWKV
};
// Split mode
enum llama_split_mode {
    LLAMA_SPLIT_MODE_NONE  = 0, // single GPU
    LLAMA_SPLIT_MODE_LAYER = 1, // split layers across GPUs
    LLAMA_SPLIT_MODE_ROW   = 2, // split rows across GPUs
};
// RoPE scaling type
enum llama_rope_scaling_type {
    LLAMA_ROPE_SCALING_TYPE_UNSPECIFIED = -1,
    LLAMA_ROPE_SCALING_TYPE_NONE        = 0,
    LLAMA_ROPE_SCALING_TYPE_LINEAR      = 1,
    LLAMA_ROPE_SCALING_TYPE_YARN        = 2,
    LLAMA_ROPE_SCALING_TYPE_MAX_VALUE   = LLAMA_ROPE_SCALING_TYPE_YARN,
};
// Pooling type
enum llama_pooling_type {
    LLAMA_POOLING_TYPE_UNSPECIFIED = -1,
    LLAMA_POOLING_TYPE_NONE = 0,
    LLAMA_POOLING_TYPE_MEAN = 1,
    LLAMA_POOLING_TYPE_CLS  = 2,
    LLAMA_POOLING_TYPE_LAST = 3,
};
// Attention type
enum llama_attention_type {
    LLAMA_ATTENTION_TYPE_UNSPECIFIED = -1,
    LLAMA_ATTENTION_TYPE_CAUSAL      = 0,
    LLAMA_ATTENTION_TYPE_NON_CAUSAL  = 1,
};
// Model parameters
struct llama_model_params {
    int32_t n_gpu_layers;      // number of layers to store in VRAM
    enum llama_split_mode split_mode; // how to split the model across GPUs
    int32_t main_gpu;          // main GPU to use
    const float * tensor_split; // how to split layers across GPUs (size: 128)
    
    // Progress callback
    void * progress_callback_user_data;
    
    // Override key-value pairs
    const void * kv_overrides;
    
    // Model vocabulary type override
    bool vocab_only;
    bool use_mmap;
    bool use_mlock;
    bool check_tensors;
};
// Context parameters
struct llama_context_params {
    uint32_t n_ctx;            // text context, 0 = from model
    uint32_t n_batch;          // logical maximum batch size
    uint32_t n_ubatch;         // physical maximum batch size
    uint32_t n_seq_max;        // max number of sequences
    int32_t  n_threads;        // number of threads for generation
    int32_t  n_threads_batch;  // number of threads for batch processing
    
    enum llama_rope_scaling_type rope_scaling_type;
    enum llama_pooling_type      pooling_type;
    enum llama_attention_type    attention_type;
    
    float rope_freq_base;
    float rope_freq_scale;
    float yarn_ext_factor;
    float yarn_attn_factor;
    float yarn_beta_fast;
    float yarn_beta_slow;
    uint32_t yarn_orig_ctx;
    float defrag_thold;
    
    // Abort callback
    void * abort_callback;
    void * abort_callback_data;
    
    // Type of quantization
    int type_k;
    int type_v;
    
    bool logits_all;
    bool embeddings;
    bool offload_kqv;
    bool flash_attn;
    bool no_perf;
};
//
// Library initialization
//

// Initialize the llama backend
void llama_backend_init(void);
// Cleanup the llama backend - call once at the end
void llama_backend_free(void);
//
// Model loading
//

// Get default model parameters
struct llama_model_params llama_model_default_params(void);
// Load a model from file
llama_model * llama_load_model_from_file(
    const char * path_model,
    struct llama_model_params params);
// Free a model
void llama_free_model(llama_model * model);
//
// Context management
//

// Get default context parameters
struct llama_context_params llama_context_default_params(void);
// Create a context with a model
llama_context * llama_new_context_with_model(
    llama_model * model,
    struct llama_context_params params);
// Free a context
void llama_free(llama_context * ctx);
//
// Model properties
//

// Get vocab size
int32_t llama_n_vocab(const llama_model * model);
// Get context size
int32_t llama_n_ctx_train(const llama_model * model);
// Get embedding size
int32_t llama_n_embd(const llama_model * model);
// Get vocabulary type
enum llama_vocab_type llama_vocab_type(const llama_model * model);
//
// Context properties
//

// Get context size
int32_t llama_n_ctx(const llama_context * ctx);
// Get batch size
int32_t llama_n_batch(const llama_context * ctx);
//
// Special tokens
//

// Beginning of sentence token
llama_token llama_token_bos(const llama_model * model);
// End of sentence token
llama_token llama_token_eos(const llama_model * model);
// Classification/separation token
llama_token llama_token_cls(const llama_model * model);
// Sentence separator token
llama_token llama_token_sep(const llama_model * model);
// Newline token
llama_token llama_token_nl(const llama_model * model);
// Padding token
llama_token llama_token_pad(const llama_model * model);
// Prefix token (for infill)
llama_token llama_token_prefix(const llama_model * model);
// Middle token (for infill)
llama_token llama_token_middle(const llama_model * model);
// Suffix token (for infill)
llama_token llama_token_suffix(const llama_model * model);
// End of text token (for infill)
llama_token llama_token_eot(const llama_model * model);
// Check if token is EOG (end of generation)
bool llama_token_is_eog(const llama_model * model, llama_token token);
// Check if token is control
bool llama_token_is_control(const llama_model * model, llama_token token);