packages/llm_llamacpp/lib/src/bindings/llama_bindings.dart

// AUTO-GENERATED FILE. DO NOT MODIFY.
//
// This file was generated by ffigen from llama.h
// To regenerate: dart run ffigen --config ffigen.yaml

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// FFI bindings for llama.cpp
class LlamaBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  LlamaBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  LlamaBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Initialize the llama backend
  void llama_backend_init() {
    return _llama_backend_init();
  }

  late final _llama_backend_initPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('llama_backend_init');
  late final _llama_backend_init = _llama_backend_initPtr
      .asFunction<void Function()>();

  /// Cleanup the llama backend - call once at the end
  void llama_backend_free() {
    return _llama_backend_free();
  }

  late final _llama_backend_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('llama_backend_free');
  late final _llama_backend_free = _llama_backend_freePtr
      .asFunction<void Function()>();

  /// Get default model parameters
  llama_model_params llama_model_default_params() {
    return _llama_model_default_params();
  }

  late final _llama_model_default_paramsPtr =
      _lookup<ffi.NativeFunction<llama_model_params Function()>>(
        'llama_model_default_params',
      );
  late final _llama_model_default_params = _llama_model_default_paramsPtr
      .asFunction<llama_model_params Function()>();

  /// Load a model from file
  ffi.Pointer<llama_model> llama_load_model_from_file(
    ffi.Pointer<ffi.Char> path_model,
    llama_model_params params,
  ) {
    return _llama_load_model_from_file(path_model, params);
  }

  late final _llama_load_model_from_filePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<llama_model> Function(
            ffi.Pointer<ffi.Char>,
            llama_model_params,
          )
        >
      >('llama_load_model_from_file');
  late final _llama_load_model_from_file = _llama_load_model_from_filePtr
      .asFunction<
        ffi.Pointer<llama_model> Function(
          ffi.Pointer<ffi.Char>,
          llama_model_params,
        )
      >();

  /// Free a model
  void llama_free_model(ffi.Pointer<llama_model> model) {
    return _llama_free_model(model);
  }

  late final _llama_free_modelPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<llama_model>)>>(
        'llama_free_model',
      );
  late final _llama_free_model = _llama_free_modelPtr
      .asFunction<void Function(ffi.Pointer<llama_model>)>();

  /// Get default context parameters
  llama_context_params llama_context_default_params() {
    return _llama_context_default_params();
  }

  late final _llama_context_default_paramsPtr =
      _lookup<ffi.NativeFunction<llama_context_params Function()>>(
        'llama_context_default_params',
      );
  late final _llama_context_default_params = _llama_context_default_paramsPtr
      .asFunction<llama_context_params Function()>();

  /// Create a context with a model
  ffi.Pointer<llama_context> llama_new_context_with_model(
    ffi.Pointer<llama_model> model,
    llama_context_params params,
  ) {
    return _llama_new_context_with_model(model, params);
  }

  late final _llama_new_context_with_modelPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<llama_context> Function(
            ffi.Pointer<llama_model>,
            llama_context_params,
          )
        >
      >('llama_new_context_with_model');
  late final _llama_new_context_with_model = _llama_new_context_with_modelPtr
      .asFunction<
        ffi.Pointer<llama_context> Function(
          ffi.Pointer<llama_model>,
          llama_context_params,
        )
      >();

  /// Free a context
  void llama_free(ffi.Pointer<llama_context> ctx) {
    return _llama_free(ctx);
  }

  late final _llama_freePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<llama_context>)>
      >('llama_free');
  late final _llama_free = _llama_freePtr
      .asFunction<void Function(ffi.Pointer<llama_context>)>();

  /// Get vocab size
  int llama_n_vocab(ffi.Pointer<llama_model> model) {
    return _llama_n_vocab(model);
  }

  late final _llama_n_vocabPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<llama_model>)>>(
        'llama_n_vocab',
      );
  late final _llama_n_vocab = _llama_n_vocabPtr
      .asFunction<int Function(ffi.Pointer<llama_model>)>();

  /// Get context size
  int llama_n_ctx_train(ffi.Pointer<llama_model> model) {
    return _llama_n_ctx_train(model);
  }

  late final _llama_n_ctx_trainPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<llama_model>)>>(
        'llama_n_ctx_train',
      );
  late final _llama_n_ctx_train = _llama_n_ctx_trainPtr
      .asFunction<int Function(ffi.Pointer<llama_model>)>();

  /// Get embedding size
  int llama_n_embd(ffi.Pointer<llama_model> model) {
    return _llama_n_embd(model);
  }

  late final _llama_n_embdPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<llama_model>)>>(
        'llama_n_embd',
      );
  late final _llama_n_embd = _llama_n_embdPtr
      .asFunction<int Function(ffi.Pointer<llama_model>)>();

  /// Get vocabulary type
  llama_vocab_type llama_vocab_type$1(ffi.Pointer<llama_model> model) {
    return llama_vocab_type.fromValue(_llama_vocab_type$1(model));
  }

  late final _llama_vocab_type$1Ptr =
      _lookup<
        ffi.NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<llama_model>)>
      >('llama_vocab_type');
  late final _llama_vocab_type$1 = _llama_vocab_type$1Ptr
      .asFunction<int Function(ffi.Pointer<llama_model>)>();

  /// Get context size
  int llama_n_ctx(ffi.Pointer<llama_context> ctx) {
    return _llama_n_ctx(ctx);
  }

  late final _llama_n_ctxPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<llama_context>)>
      >('llama_n_ctx');
  late final _llama_n_ctx = _llama_n_ctxPtr
      .asFunction<int Function(ffi.Pointer<llama_context>)>();

  /// Get batch size
  int llama_n_batch(ffi.Pointer<llama_context> ctx) {
    return _llama_n_batch(ctx);
  }

  late final _llama_n_batchPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<llama_context>)>
      >('llama_n_batch');
  late final _llama_n_batch = _llama_n_batchPtr
      .asFunction<int Function(ffi.Pointer<llama_context>)>();

  /// Beginning of sentence token
  int llama_token_bos(ffi.Pointer<llama_model> model) {
    return _llama_token_bos(model);
  }

  late final _llama_token_bosPtr =
      _lookup<
        ffi.NativeFunction<llama_token Function(ffi.Pointer<llama_model>)>
      >('llama_token_bos');
  late final _llama_token_bos = _llama_token_bosPtr
      .asFunction<int Function(ffi.Pointer<llama_model>)>();

  /// End of sentence token
  int llama_token_eos(ffi.Pointer<llama_model> model) {
    return _llama_token_eos(model);
  }

  late final _llama_token_eosPtr =
      _lookup<
        ffi.NativeFunction<llama_token Function(ffi.Pointer<llama_model>)>
      >('llama_token_eos');
  late final _llama_token_eos = _llama_token_eosPtr
      .asFunction<int Function(ffi.Pointer<llama_model>)>();

  /// Classification/separation token
  int llama_token_cls(ffi.Pointer<llama_model> model) {
    return _llama_token_cls(model);
  }

  late final _llama_token_clsPtr =
      _lookup<
        ffi.NativeFunction<llama_token Function(ffi.Pointer<llama_model>)>
      >('llama_token_cls');
  late final _llama_token_cls = _llama_token_clsPtr
      .asFunction<int Function(ffi.Pointer<llama_model>)>();

  /// Sentence separator token
  int llama_token_sep(ffi.Pointer<llama_model> model) {
    return _llama_token_sep(model);
  }

  late final _llama_token_sepPtr =
      _lookup<
        ffi.NativeFunction<llama_token Function(ffi.Pointer<llama_model>)>
      >('llama_token_sep');
  late final _llama_token_sep = _llama_token_sepPtr
      .asFunction<int Function(ffi.Pointer<llama_model>)>();

  /// Newline token
  int llama_token_nl(ffi.Pointer<llama_model> model) {
    return _llama_token_nl(model);
  }

  late final _llama_token_nlPtr =
      _lookup<
        ffi.NativeFunction<llama_token Function(ffi.Pointer<llama_model>)>
      >('llama_token_nl');
  late final _llama_token_nl = _llama_token_nlPtr
      .asFunction<int Function(ffi.Pointer<llama_model>)>();

  /// Padding token
  int llama_token_pad(ffi.Pointer<llama_model> model) {
    return _llama_token_pad(model);
  }

  late final _llama_token_padPtr =
      _lookup<
        ffi.NativeFunction<llama_token Function(ffi.Pointer<llama_model>)>
      >('llama_token_pad');
  late final _llama_token_pad = _llama_token_padPtr
      .asFunction<int Function(ffi.Pointer<llama_model>)>();

  /// Prefix token (for infill)
  int llama_token_prefix(ffi.Pointer<llama_model> model) {
    return _llama_token_prefix(model);
  }

  late final _llama_token_prefixPtr =
      _lookup<
        ffi.NativeFunction<llama_token Function(ffi.Pointer<llama_model>)>
      >('llama_token_prefix');
  late final _llama_token_prefix = _llama_token_prefixPtr
      .asFunction<int Function(ffi.Pointer<llama_model>)>();

  /// Middle token (for infill)
  int llama_token_middle(ffi.Pointer<llama_model> model) {
    return _llama_token_middle(model);
  }

  late final _llama_token_middlePtr =
      _lookup<
        ffi.NativeFunction<llama_token Function(ffi.Pointer<llama_model>)>
      >('llama_token_middle');
  late final _llama_token_middle = _llama_token_middlePtr
      .asFunction<int Function(ffi.Pointer<llama_model>)>();

  /// Suffix token (for infill)
  int llama_token_suffix(ffi.Pointer<llama_model> model) {
    return _llama_token_suffix(model);
  }

  late final _llama_token_suffixPtr =
      _lookup<
        ffi.NativeFunction<llama_token Function(ffi.Pointer<llama_model>)>
      >('llama_token_suffix');
  late final _llama_token_suffix = _llama_token_suffixPtr
      .asFunction<int Function(ffi.Pointer<llama_model>)>();

  /// End of text token (for infill)
  int llama_token_eot(ffi.Pointer<llama_model> model) {
    return _llama_token_eot(model);
  }

  late final _llama_token_eotPtr =
      _lookup<
        ffi.NativeFunction<llama_token Function(ffi.Pointer<llama_model>)>
      >('llama_token_eot');
  late final _llama_token_eot = _llama_token_eotPtr
      .asFunction<int Function(ffi.Pointer<llama_model>)>();

  /// Check if token is EOG (end of generation)
  bool llama_token_is_eog(ffi.Pointer<llama_model> model, int token) {
    return _llama_token_is_eog(model, token);
  }

  late final _llama_token_is_eogPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<llama_model>, llama_token)
        >
      >('llama_token_is_eog');
  late final _llama_token_is_eog = _llama_token_is_eogPtr
      .asFunction<bool Function(ffi.Pointer<llama_model>, int)>();

  /// Check if token is control
  bool llama_token_is_control(ffi.Pointer<llama_model> model, int token) {
    return _llama_token_is_control(model, token);
  }

  late final _llama_token_is_controlPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<llama_model>, llama_token)
        >
      >('llama_token_is_control');
  late final _llama_token_is_control = _llama_token_is_controlPtr
      .asFunction<bool Function(ffi.Pointer<llama_model>, int)>();
